--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-    <script>var whTooltips = {colorLinks: true, renameLinks: false, iconizeLinks: true, iconSize: "medium"};</script>
+    <script>var whTooltips = {colorLinks: false, renameLinks: false, iconizeLinks: false};</script>
     <script src="https://wow.zamimg.com/widgets/power.js"></script>
     <title>Continuum Loot</title>
   </head>
